Se agrega registro y cambio en el footer

--- a/styles.css
+++ b/styles.css
@@ -156,3 +156,18 @@
   
   /* Estilos del pie de página */
   
+
+/* Estilos del registro */
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  min-height: 100vh; 
+  box-sizing: border-box; 
+}
+.form-card {
+  max-width: 600px; 
+  width: 100%; 
+  margin: 0 auto; 
+}
