--- a/styles.css
+++ b/styles.css
@@ -45,17 +45,18 @@
   /* Estilos del héroe */
   .hero img {
     width: 100%;
-    max-height: 355px;
+    height: auto;
     object-fit: cover;
   }
 
-  h2{
-    font-size: 45px;
+  .titulo {
+    font-size: 45px; /* Tamaño por defecto */
     color: #1825AA;
     display: flex;
     justify-content: center;
     margin: 20px 0;
   }
+  
 
   .grid-container {
     display: grid;
@@ -70,7 +71,7 @@
     width: 100%;
     height: auto;
     border-radius: 8px; 
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1);
 }
   
   /* Estilos de las ofertas */
@@ -125,7 +126,7 @@
   }
   
   .product-card {
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
     display: flex;
     flex-direction: column;
